@@ -1,0 +1,2 @@
+src=@abs_top_srcdir@/java
+bin=bin
